--- a/src/it/polito/teaching/cv/ImageSeg.fxml
+++ b/src/it/polito/teaching/cv/ImageSeg.fxml
@@ -1,47 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="it.polito.teaching.cv.ImageSegController">
-	<top>
-		<VBox>
-			<HBox alignment="CENTER" spacing="10">
-				<padding>
-					<Insets top="10" bottom="10" />
-				</padding>
-				<CheckBox fx:id="canny" onAction="#cannySelected" text="Edge detection"/>
-				<Label text="Canny Threshold" />
-				<Slider fx:id="threshold" disable="true" />
-			</HBox>
-			<Separator />
-			<HBox alignment="CENTER" spacing="10">
-				<padding>
-					<Insets top="10" bottom="10" />
-				</padding>
-				<CheckBox fx:id="dilateErode" onAction="#dilateErodeSelected" text="Background removal"/>
-				<CheckBox fx:id="inverse" text="Invert" disable="true"/>
-			</HBox>
-			<Separator />
-		</VBox>
-	</top>
-	<center>
-		<VBox alignment="CENTER">
-			<padding>
-				<Insets right="10" left="10" />
-			</padding>
-			<ImageView fx:id="originalFrame" />
-		</VBox>
-	</center>
-	<bottom>
-		<HBox alignment="CENTER">
-			<padding>
-				<Insets top="25" right="25" bottom="25" left="25" />
-			</padding>
-			<Button fx:id="cameraButton" alignment="center" text="Start camera" onAction="#startCamera" disable="true" />
-		</HBox>
-	</bottom>
+
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polito.teaching.cv.ImageSegController">
+  <bottom>
+    <HBox alignment="CENTER">
+      <padding>
+        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+      </padding>
+      <Button fx:id="cameraButton" alignment="CENTER" disable="true" onAction="#startCamera" text="Start camera" />
+    </HBox>
+  </bottom>
+  <center>
+    <VBox alignment="CENTER">
+      <padding>
+        <Insets left="10.0" right="10.0" />
+      </padding>
+      <ImageView fx:id="originalFrame" />
+    </VBox>
+  </center>
+  <top>
+    <VBox>
+      <HBox alignment="CENTER" spacing="10.0">
+        <padding>
+          <Insets bottom="10.0" top="10.0" />
+        </padding>
+        <CheckBox fx:id="canny" onAction="#cannySelected" text="Edge detection" />
+        <Label text="Canny Threshold" />
+        <Slider fx:id="threshold" disable="true" />
+      </HBox>
+      <Separator />
+      <HBox alignment="CENTER" spacing="10.0">
+        <padding>
+          <Insets bottom="10.0" top="10.0" />
+        </padding>
+        <CheckBox fx:id="dilateErode" onAction="#dilateErodeSelected" text="Background removal" />
+        <CheckBox fx:id="inverse" disable="true" text="Invert" />
+      </HBox>
+      <Separator />
+    </VBox>
+  </top>
 </BorderPane>
