fix package name

--- a/src/it/polito/elite/teaching/cv/ImageSeg.fxml
+++ b/src/it/polito/elite/teaching/cv/ImageSeg.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polito.teaching.cv.ImageSegController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="it.polito.elite.teaching.cv.ImageSegController">
   <bottom>
     <HBox alignment="CENTER">
       <padding>
